k8nmanifest/nginx-ingress-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-lb
  namespace: ingress-nginx
spec:
  selector:
    app: nginx-ingress
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
      nodePort: 30080  # Specify port
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
      nodePort: 30443  # Specify port
  type: NodePort
