k8nmanifest/ingress-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress-frontend
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Rewrites to remove "/orders" prefix
spec:
  ingressClassName: nginx  # Make sure this matches your ingress controller
  rules:
    - host: my-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
