k8nmanifest/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress-service
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Rewrites to remove "/orders" prefix
spec:
  ingressClassName: nginx  # Make sure this matches your ingress controller
  rules:
    - host: my-app.local
      http:
        paths:
          - path: /orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /products(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 80
